--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,49 @@
 annotated-types==0.7.0
 anyio==4.7.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
 click==8.1.7
+coloredlogs==15.0.1
 fastapi==0.115.6
+filelock==3.16.1
+flatbuffers==24.3.25
+fsspec==2024.10.0
+grpcio==1.67.1
 h11==0.14.0
 httptools==0.6.4
+huggingface-hub==0.26.5
+humanfriendly==10.0
 idna==3.10
+milvus-lite==2.4.10
+milvus-model==0.2.11
+mpmath==1.3.0
+numpy==2.2.0
+onnxruntime==1.20.1
+packaging==24.2
+pandas==2.2.3
+protobuf==5.29.1
 pydantic==2.10.3
 pydantic_core==2.27.1
+pymilvus==2.5.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2024.2
 PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+safetensors==0.4.5
+scipy==1.14.1
+six==1.17.0
 sniffio==1.3.1
 starlette==0.41.3
+sympy==1.13.3
+tokenizers==0.21.0
+tqdm==4.67.1
+transformers==4.47.0
 typing_extensions==4.12.2
+tzdata==2024.2
+ujson==5.10.0
+urllib3==2.2.3
 uvicorn==0.32.1
 uvloop==0.21.0
 watchfiles==1.0.0
